# picotts

./: CMakeLists.txt
include/picotts/: picotts_publisher.h
launch/: test_picotts.launch
src/: picotts.cpp
